; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_19103.c_name_resolve.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_19103.c_name_resolve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }
%struct.hostent = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @name_resolve(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.in_addr, align 4
  %5 = alloca %struct.hostent*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @inet_addr(i32* %6)
  %8 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = icmp eq i32 %7, -1
  br i1 %9, label %10, label %25

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call %struct.hostent* @gethostbyname(i32* %11)
  store %struct.hostent* %12, %struct.hostent** %5, align 8
  %13 = icmp ne %struct.hostent* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %28

15:                                               ; preds = %10
  %16 = load %struct.hostent*, %struct.hostent** %5, align 8
  %17 = getelementptr inbounds %struct.hostent, %struct.hostent* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %20 = bitcast i32* %19 to i8*
  %21 = load %struct.hostent*, %struct.hostent** %5, align 8
  %22 = getelementptr inbounds %struct.hostent, %struct.hostent* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @bcopy(i32 %18, i8* %20, i32 %23)
  br label %25

25:                                               ; preds = %15, %1
  %26 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %25, %14
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @inet_addr(i32*) #1

declare dso_local %struct.hostent* @gethostbyname(i32*) #1

declare dso_local i32 @bcopy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
